--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==0.1.11
 aniso8601==3.0.0
 astor==0.6.2
+astroid==1.6.3
 bleach==1.5.0
 click==6.7
 cycler==0.10.0
@@ -14,18 +15,22 @@ grpcio==1.10.0
 gunicorn==19.7.1
 h5py==2.7.0
 html5lib==0.9999999
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
-Keras==2.0.8
+Keras==2.1.3
 kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
 Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.2.2
+mccabe==0.6.1
 networkx==2.1
 numpy==1.13.0
 olefile==0.45.1
 Pillow==4.1.1
 protobuf==3.5.2.post1
+pylint==1.8.4
 pyparsing==2.2.0
 python-dateutil==2.7.0
 pytz==2018.3
@@ -40,4 +45,5 @@ tensorflow-tensorboard==0.1.8
 termcolor==1.1.0
 Theano==0.9.0
 Werkzeug==0.14.1
+wrapt==1.10.11
 WTForms==2.1
